api to show report (success and failed)
